cks/dashboard/tls-ingress-kubernetes-dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - kubernetes-dashboard.4labs.example
    secretName: certificado-kubernetes-dashboard-tls
  rules:
  - host: kubernetes-dashboard.4labs.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 9090
